kuibenetesInAction/5-services/kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tongwei
spec:
  selector:
    app: tongwei
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
