kuibenetesInAction/5-services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tongwei-nodeport
spec:
  type: NodePort
  selector:
    app: tongwei
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30123
