kuibenetesInAction/5-services/portsName.yaml
kind: Pod
spec:
  containers:
    - name: kubia
      ports:
      - name: http
        containerPort: 8080
      - name: https
        containerPort: 8443
---
apiVersion: v1
kind: Service
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
