kuibenetesInAction/5-services/service-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: tongwei2
spec:
  sessionAffinity: ClientIP
  selector:
    app: tongwei
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
